--- a/package.json
+++ b/package.json
@@ -4,32 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "bundle": "node ./node_modules/webpack/bin/webpack.js --progress --colors"
+    "test": "react-scripts test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
   },
   "author": "Eric Hasselbring",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
-    "bundle": "^0.2.3",
+    "express": "^4.15.2",
     "fs": "0.0.1-security",
     "http-server": "^0.9.0",
-    "jquery": "^3.1.1",
     "path": "^0.12.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-promise": "^0.5.3",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.7.2"
   },
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "react-scripts": "0.9.0",
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.13.0",
     "json-loader": "^0.5.4",
     "webpack": "^2.1.0-beta.25",
